manifests/base/serving-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-serving
  labels: { app: iris-serving }
spec:
  replicas: 3
  selector:
    matchLabels: { app: iris-serving }
  template:
    metadata:
      labels: { app: iris-serving }
    spec:
      containers:
        - name: iris-serving
          image: iris-serving:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
          readinessProbe:
            httpGet: { path: /ping, port: 5001 }
            initialDelaySeconds: 20
            periodSeconds: 10
