manifests/base/serving-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-serving
spec:
  selector: { app: iris-serving }
  ports:
    - port: 5001
      targetPort: 5001
