manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /invocations
spec:
  ingressClassName: nginx
  rules:
    - host: iris.local
      http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: iris-serving
                port: { number: 5001 }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: iris.local
      http:
        paths:
          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port: { number: 5000 }
